trunk/Archive2/44/84ebcc027b5978/output
main.cpp:8:10: error: 'A::A' has the same name as the class in which it is declared
     enum A{a,b,c};
          ^
main.cpp:9:12: error: redeclaration of 'a'
     enum B{a,b,c};
            ^
main.cpp:8:12: note: previous declaration 'A::<anonymous enum> a'
     enum A{a,b,c};
            ^
main.cpp:9:14: error: redeclaration of 'b'
     enum B{a,b,c};
              ^
main.cpp:8:14: note: previous declaration 'A::<anonymous enum> b'
     enum A{a,b,c};
              ^
main.cpp:9:16: error: redeclaration of 'c'
     enum B{a,b,c};
                ^
main.cpp:8:16: note: previous declaration 'A::<anonymous enum> c'
     enum A{a,b,c};
                ^
